working main character import

--- a/ThirdPersonMap/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ThirdPersonMap/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -395,7 +395,8 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/levels/Alpha_Level
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2074,7 +2075,7 @@ PhysicsConstraintTemplate.AngularMotor=True
 
 [DetailPropertyExpansion]
 LandscapeEditorObject="\"Object\" \"Object.New Landscape.ImportLandscape_Layers\" \"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
-Object="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object\" \"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object\" \"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object\" \"Object.Options.bSendUsageData\" "
@@ -2085,9 +2086,9 @@ WaterBodyLake="\"Object.Water.WaterBodyComponent.Object.Rendering.UnderwaterPost
 WaterBody="\"Object.Water.WaterBodyComponent.Object.Rendering.UnderwaterPostProcessSettings\" \"Object.Water.WaterBodyComponent.Object.Rendering.UnderwaterPostProcessSettings.PostProcessSettings\" \"Object.Water.WaterBodyComponent.Object.Collision.BodyInstance.COMNudge\" \"Object.Water.WaterBodyComponent.Object.Collision.BodyInstance.InertiaTensorScale\" "
 StaticMeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Lake3_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
@@ -2289,8 +2290,8 @@ MeshSculptBrushOpProps="\"Object\" "
 SecondarySmoothBrushOpProps="\"Object\" "
 BaseSmoothBrushOpProps="\"Object\" "
 MeshEditingViewProperties="\"Object\" "
-CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" "
+CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 FracturePlaneCutSettings="\"Object\" "
 Enemy_AI_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 BlackboardData="\"Object\" \"Object.Blackboard\" "
@@ -3336,8 +3337,8 @@ DisplayedStatsPageName=TextureStats
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/MainCharacter/SKM_MainCharacter_PhysicsAsset
-MRUItem2=/Game/MainCharacter/SKM_MainCharacter
+MRUItem1=/Game/MainCharacter/SKM_MainCharacter
+MRUItem2=/Game/MainCharacter/SKM_MainCharacter_PhysicsAsset
 MRUItem3=/Game/Characters/Mannequins/Meshes/SK_Mannequin
 MRUItem4=/Game/SwimmingBlendSpace
 MRUItem5=/Game/MainCharacter/MainCharacter_T-pose_001_Skeleton
@@ -3543,6 +3544,19 @@ FbxImportUI.Miscellaneous=True
 FbxImportUI.Material=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/MainCharacter/SKM_MainCharacter_PhysicsAsset.SKM_MainCharacter_PhysicsAsset;
+RecentlyPlaced=/Game/MainCharacter/SKM_MainCharacter.SKM_MainCharacter;
+RecentlyPlaced=/Game/MainCharacter/M_Trousers_001.M_Trousers_001;
+RecentlyPlaced=/Game/MainCharacter/M_T-Shirt_002.M_T-Shirt_002;
+RecentlyPlaced=/Game/MainCharacter/M_Skin_001.M_Skin_001;
+RecentlyPlaced=/Game/MainCharacter/M_Eye.M_Eye;
+RecentlyPlaced=/Game/MainCharacter/M_Cornea_Texture.M_Cornea_Texture;
+RecentlyPlaced=/Game/MainCharacter/M_Coat_001.M_Coat_001;
+RecentlyPlaced=/Game/MainCharacter/M_Circuitry_001.M_Circuitry_001;
+RecentlyPlaced=/Game/MainCharacter/M_Boots_001.M_Boots_001;
+RecentlyPlaced=/Game/MainCharacter/M_Boot_souls_001.M_Boot_souls_001;
+RecentlyPlaced=/Game/MainCharacter/head_texture.head_texture;
+RecentlyPlaced=/Game/MainCharacter/eyeball_texture_paint.eyeball_texture_paint;
 RecentlyPlaced=/Game/MainCharacter/MainCharacter_T-pose_001.MainCharacter_T-pose_001;
 RecentlyPlaced=/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny;
 RecentlyPlaced=/Game/Characters/Mannequins/Meshes/SK_Mannequin.SK_Mannequin;
@@ -3550,19 +3564,6 @@ RecentlyPlaced=/Game/MainCharacter/MainCharacter_T-pose_Skeleton.MainCharacter_T
 RecentlyPlaced=/Game/MainCharacter/MainCharacter_T-pose_Anim_Armature_002_Armature_mixamo_com_Layer0.MainCharacter_T-pose_Anim_Armature_002_Armature_mixamo_com_Layer0;
 RecentlyPlaced=/Game/Main_Character/Rigged_Main_Character_T-Pose.Rigged_Main_Character_T-Pose;
 RecentlyPlaced=/Game/Animations/Idle_Main_Character_Anim.Idle_Main_Character_Anim;
-RecentlyPlaced=/Game/EnemyAI/Enemy_AI.Enemy_AI;
-RecentlyPlaced=/Game/EnemyAI/enemySpawn.enemySpawn;
-RecentlyPlaced=/Game/EnemyAI/enemy.enemy;
-RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
-RecentlyPlaced=/Game/Right_front_Kick_Montage.Right_front_Kick_Montage;
-RecentlyPlaced=/Game/ThirdPerson/Blueprints/WaterBodyLake_Blueprint.WaterBodyLake_Blueprint;
-RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
-RecentlyPlaced=/Script/Engine.Pawn;/Engine/Transient.ActorFactoryPawn_0
-RecentlyPlaced=/Game/frac_test_1.frac_test_1;
 
 [PluginBrowser]
 InstalledPlugins=BasicMontageSequenceManager
@@ -3804,7 +3805,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
