Third person char hit event from enemy by 0.1 added, spawn emitter added  to break hit location but no effect

--- a/ThirdPersonMap/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ThirdPersonMap/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -167,7 +167,7 @@ Landscape=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.C
 MoveablePlatform_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,enemy_C.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionActor.Materials.MaterialList,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,
 CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,enemy_C.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionActor.Materials.MaterialList,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,CapsuleComponent.Collision.Collision,
-BP_ThirdPersonCharacter_C=
+BP_ThirdPersonCharacter_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,enemy_C.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionActor.Materials.MaterialList,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,
 PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,enemy_C.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionActor.Materials.MaterialList,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,
 PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,WaterBodyCustom.Physics.ConstraintsGroup,
 Actor=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,enemy_C.Physics.ConstraintsGroup,GameMapsSettings.DefaultModes.SelectedGameModeDetails,GeometryCollectionActor.Materials.MaterialList,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Bindings.AxisMappings,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,
@@ -446,13 +446,10 @@ ContentBrowserTab2.CurrentViewType=1
 LastLevel=/Game/levels/Beta_Level
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/EnemyAI/Enemy_Behavior_Tree.Enemy_Behavior_Tree
-OpenAssetsAtExit=/Game/EnemyAI/Enemy_BlackBoard.Enemy_BlackBoard
-OpenAssetsAtExit=/Game/EnemyAI/enemy_simple.enemy_simple
+CleanShutdown=False
+OpenAssetsAtExit=/Game/EnemyAI/Tasks/BTTask_Attack.BTTask_Attack
 OpenAssetsAtExit=/Game/EnemyAI/Enemy_AI_RayCast.Enemy_AI_RayCast
-OpenAssetsAtExit=/Game/HealthUI/UI_HealthBar.UI_HealthBar
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2546,6 +2543,7 @@ WidgetComponent.Tags=True
 WidgetComponent.ComponentReplication=True
 WidgetComponent.Variable=True
 WidgetComponent.Cooking=True
+Enemy_AI_RayCast_C.Default=True
 
 [DetailPropertyExpansion]
 LandscapeEditorObject="\"Object\" \"Object.New Landscape.ImportLandscape_Layers\" \"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
@@ -2560,7 +2558,7 @@ WaterBodyLake="\"Object.Water.WaterBodyComponent.Object.Rendering.UnderwaterPost
 WaterBody="\"Object.Water.WaterBodyComponent.Object.Rendering.UnderwaterPostProcessSettings\" \"Object.Water.WaterBodyComponent.Object.Rendering.UnderwaterPostProcessSettings.PostProcessSettings\" \"Object.Water.WaterBodyComponent.Object.Collision.BodyInstance.COMNudge\" \"Object.Water.WaterBodyComponent.Object.Collision.BodyInstance.InertiaTensorScale\" "
 StaticMeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 Lake3_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
@@ -2623,7 +2621,7 @@ LandscapeComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
 CameraComponent="\"Object\" \"Object.PostProcess.PostProcessSettings\" \"Object.PostProcess.PostProcessSettings.SceneColorTint\" \"Object.PostProcess.PostProcessSettings.Bloom1Tint\" \"Object.PostProcess.PostProcessSettings.Bloom2Tint\" \"Object.PostProcess.PostProcessSettings.Bloom3Tint\" \"Object.PostProcess.PostProcessSettings.Bloom4Tint\" \"Object.PostProcess.PostProcessSettings.Bloom5Tint\" \"Object.PostProcess.PostProcessSettings.Bloom6Tint\" \"Object.PostProcess.PostProcessSettings.BloomDirtMaskTint\" \"Object.PostProcess.PostProcessSettings.IndirectLightingColor\" \"Object.PostProcess.PostProcessSettings.AmbientCubemapTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTint\" \"Object.PostProcess.PostProcessSettings.LensFlareTints\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcess.PostProcessSettings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcess.PostProcessSettings.WeightedBlendables\" "
 EdGraphNode_Comment="\"Object\" "
-EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+EdGraphNode="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -3894,20 +3892,20 @@ DisplayedStatsPageName=TextureStats
 
 [ContentBrowserRecent]
 MRUItem0=/Game/EnemyAI/Tasks/BTTask_Attack
-MRUItem1=/Game/EnemyAI/Enemy_Behavior_Tree
-MRUItem2=/Game/HealthUI/UI_HealthBar
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/EnemyAI/Enemy_AI_Controller
-MRUItem5=/Game/EnemyAI/Tasks/BTTask_FindSearchPoint
-MRUItem6=/Game/EnemyAI/Tasks/BTTask_Roam_Around
-MRUItem7=/Game/Characters/Enemy_Characters/Animations/AI/Enemy_BT_AnimBlueprint
-MRUItem8=/Game/Characters/Enemy_Characters/Animations/AI/Walk_BlendSpace1D
-MRUItem9=/Game/Characters/Enemy_Characters/Animations/Walk_With_Rifle
-MRUItem10=/Game/Characters/Enemy_Characters/Animations/Firing_Rifle_Montage
-MRUItem11=/Game/Characters/Enemy_Characters/Animations/Walk_With_Rifle_Alert_
-MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem13=/Game/EnemyAI/EnemyGameMode
-MRUItem14=/Game/EnemyAI/Enemy_AI_RayCast
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/EnemyAI/Enemy_AI_RayCast
+MRUItem3=/Game/EnemyAI/Enemy_AI_Controller
+MRUItem4=/Game/EnemyAI/Enemy_Behavior_Tree
+MRUItem5=/Game/HealthUI/UI_HealthBar
+MRUItem6=/Game/EnemyAI/Tasks/BTTask_FindSearchPoint
+MRUItem7=/Game/EnemyAI/Tasks/BTTask_Roam_Around
+MRUItem8=/Game/Characters/Enemy_Characters/Animations/AI/Enemy_BT_AnimBlueprint
+MRUItem9=/Game/Characters/Enemy_Characters/Animations/AI/Walk_BlendSpace1D
+MRUItem10=/Game/Characters/Enemy_Characters/Animations/Walk_With_Rifle
+MRUItem11=/Game/Characters/Enemy_Characters/Animations/Firing_Rifle_Montage
+MRUItem12=/Game/Characters/Enemy_Characters/Animations/Walk_With_Rifle_Alert_
+MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem14=/Game/EnemyAI/EnemyGameMode
 MRUItem15=/Game/EnemyAI/enemy_simple
 MRUItem16=/Game/Characters/Enemy_Characters/Gang_Member_1/m_SHIRT
 MRUItem17=/Game/Characters/Enemy_Characters/Gang_Member_1/head
